# ProgrammingBitcoinRust

./: README.md  chapter1.typ  errors.typ  main.typ  template.typ
Chapter1/: finite-field-add-sub.typ  finite-field-division.typ  finite-fields.typ  modulo.typ  multiplication-exponentiation.typ  redefining-exponentiation.typ  summary.typ
Lib/: Cargo.toml
Lib/src/: errors.rs  main.rs
crates/: Cargo.toml  deny.toml
crates/btc-crab-tx/: Cargo.toml  NOTES.md
crates/btc-crab-tx/src/: constants.rs  elliptic_curve.rs  errors.rs  finite_fields.rs  main.rs  sec.rs  txs.rs  varints.rs  version.rs
crates/btc-crab-tx/src/transactions/: inputs.rs
